<resources>
    <string name="app_name">Passwords</string>
    <string name="action_settings">Settings</string>
    <string name="password">Contraseña</string>
    <string name="buscar">Buscar</string>

    <string name="PWD">PWD</string>
    <string name="configuraciones">Configuraciones</string>
    <string name="version_fase">4.2.0 build 46 beta2</string>
    <string name="fase">beta2</string>
    <string name="version">4.4.8</string>
    <string name="by">By Oscar Chan</string>
    <string name="title_activity_main_pwd">MainPWD</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="soft">SOFT</string>
    <string name="chan">CHAN</string>
    <string name="todo">TODO</string>
    <string name="credit">credit</string>
    <string name="add">add</string>
    <string name="settings">settings</string>
    <string name="nombre_banco">Nombre del banco</string>
    <string name="num_cuenta">Numero de tarjeta</string>
    <string name="fecha">MM/YYYY</string>
    <string name="cvv">CVV:</string>
    <string name="user">USUARIO/# TELEFONO</string>
    <string name="info_card"># Informacion para inicio de la app del banco</string>
    <string name="tarjeta_virtual">Virtual/Digital</string>
    <string name="nombre">Nombre</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="saludo">Buenos dias</string>
    <string name="banca_movil">Banca Movil</string>
    <string name="nip">NIP:</string>

    <string name="settings_theme_key" translatable="false">theme</string>
    <string name="settings_fragment_tab" translatable="false">settings_fragment_tab</string>
    <string name="settings_theme_title">Temas</string>
    <string name="settings_theme_dialog_title">Escoge un tema</string>
    <string name="settings_toolbar">Settings</string>
    <string name="sync">Sincronizacion de datos</string>
    <string name="apariencia"># Apariencia/Interfaz Visual</string>
    <string name="theme">Temas</string>
    <string name="usuario">Usuario</string>
    <string name="tarjetas">Tarjetas</string>
    <string name="datosApp"># Datos para iniciar sesion en la app del banco</string>
    <string name="titulo">Titulo</string>
    <string name="usuario_correo">Usuario/Correo/# telefono</string>
    <string name="id">id</string>
    <string name="plus_char">+</string>
    <string name="number_eight">8</string>
    <string name="less_char">-</string>
    <string name="generatePass">Crear Contraseña</string>
    <string name="inf0"># Seleccione una/varias opcion(es) para la contraseña</string>
    <string name="inf1"># Dejar en blanco para no asignar contraseña</string>
    <string name="mayus">Mayusculas</string>
    <string name="minus">Minusculas</string>
    <string name="numeros">Números</string>
    <string name="simbolos">Simbolos</string>
    <string name="label_infouser"># Cambiar usuario/contraseña</string>
    <string name="save">Guardar</string>
    <string name="label_backup"># Respaldar datos y PWDS</string>
    <string name="bckup_pwds">Backup PWDS</string>
    <string name="sincronizar_datos_usuario">Sincronizar Datos de usuario</string>
    <string name="label_welcome0"># el pin lo usara para entrar a la app</string>
    <string name="texto_de_prueba">texto de prueba</string>

</resources>
