<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.studio.chan.pwd.ScrollingActivity"
    tools:showIn="@layout/activity_scrolling"
    android:background="#000"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_centerHorizontal="true"
        android:textColor="#fff"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tvbienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="HOLA"
        android:textColor="#fff"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/inicio_password"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:hint="@string/password"
        android:gravity="center"
        android:textColor="#fff"
        android:layout_marginTop="80dp"
        android:layout_gravity="center"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvbienvenida"
        android:textColorHint="#fff">
        <requestFocus/>
    </EditText>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inicio_password"
        android:layout_marginTop="110dp">

        <TextView
            android:id="@+id/by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by"
            android:textColor="#D9FFFFFF"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/by"
            android:layout_centerHorizontal="true"
            android:text="@string/version"
            android:textColor="#D9FFFFFF" />

    </RelativeLayout>

</RelativeLayout>
