<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="25dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:background="@mipmap/ic_pwd"
                android:layout_gravity="center"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="15dp"/>

            <TextView
                android:id="@+id/saludo"
                android:text="@string/saludo"
                android:textStyle="bold"
                android:textSize="35sp"
                android:textColor="@color/textBtn"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:textColorHint="@color/bnv"
                android:layout_marginTop="50dp"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_welcome_usuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textBtn"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/bnv"
                android:layout_marginTop="10dp"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_welcome_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textBtn"
                    android:inputType="numberPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_welcome_guardar_usuario"
                android:text="ACEPTAR"
                android:textColor="@color/textBtn"
                android:layout_gravity="center"
                android:background="@drawable/boton_redondo"
                android:padding="15dp"
                android:layout_margin="35dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="la contraseña la usara para entrar a la app"
                android:textStyle="bold"
                android:textColor="@color/textBtn"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>